--- a/demo/index.html
+++ b/demo/index.html
@@ -16,18 +16,18 @@
 <body>
 <div class="ui four column grid container" id="divControls" style="visibility: hidden; opacity: 0.0">
     <div class="column">
-        <h3 class="ui header">Select a sample:</h3>
+        <!-- <h3 class="ui header">Select a sample:</h3> -->
         <select class="ui selection dropdown" id="selectSample" style="width:320px; height:38%; visibility: hidden"></select>
     </div>
-    <div class="column" id="backend-select-div" style="visibility: hidden">
+    <!-- <div class="column" id="backend-select-div" style="visibility: hidden">
         <h3 class="ui header">Render backend:</h3>
         <select class="ui selection dropdown" id="backend-select" value="svg" style="height:38%; visibility: hidden;">
             <option value="svg">SVG</option>
             <option value="canvas">Canvas</option>>
         </select>
-    </div>
+    </div> -->
     <div class="column">
-        <h3 class="ui header">Cursor controls:</h3>
+        <!-- <h3 class="ui header">Cursor controls:</h3> -->
         <div>
             <div class="ui vertical buttons">
                 <div class="ui animated fade button" id="show-cursor-btn">
@@ -65,16 +65,16 @@
                     </div>
                 </div>
             </div>
-            <div class="item">
+            <!-- <div class="item">
                 <div class="ui toggle checkbox">
                     <input type="checkbox" name="public" id="follow-cursor-checkbox">
                     <label>Follow Cursor</label>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="column" id="zoomControls">
-        <h3 class="ui header">Zoom controls:</h3>
+        <!-- <h3 class="ui header">Zoom controls:</h3> -->
         <div class="ui buttons" id="zoomControlsButtons">
             <div class="ui button" id="zoom-in-btn">
                 <i class="search plus icon"></i>
@@ -83,9 +83,9 @@
                 <i class="search minus icon"></i>
             </div>
         </div>
-        <h4 class="ui header" id="zoom-str">???</h4>
+        <!-- <h4 class="ui header" id="zoom-str">???</h4> -->
     </div>
-    <div class="column">
+    <!-- <div class="column">
         <h3 class="ui header">Show bounding box for:</h3>
         <select class="ui selection dropdown" id="selectBounding" style="visibility: hidden;">
             <option value="none">None</option>
@@ -100,8 +100,8 @@
             <option value="StaffLineActivitySymbol">ActivitySymbols</option>
             <option value="VexFlowContinuousDynamicExpression">DynamicExpressions</option>
         </select>
-    </div>
-    <div class="column">
+    </div> -->
+    <!-- <div class="column">
         <h3 class="ui header">Show debug information:</h3>
         <div class="ui relaxed list">
             <div class="item">
@@ -117,9 +117,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="column">
-        <h3 class="ui header">Debug controls:</h3>
+        <!-- <h3 class="ui header">Debug controls:</h3> -->
         <div>
             <div class="ui vertical buttons">
                 <div class="ui button" id="debug-re-render-btn">Re-render</div>
@@ -130,7 +130,7 @@
             </div>
         </div>
     </div>
-    <div class="column">
+    <!-- <div class="column">
         <h3 class="ui header">Page size:</h3>
         <select class="ui selection dropdown" id="selectPageSize"  style="visibility: hidden;">
             <option value="endless">endless</option>
@@ -144,9 +144,9 @@
             <option value="Letter L">Letter Landscape</option>
         </select>
         <div class="ui button" id="print-pdf-btn">Create PDF</div>
-    </div>
+    </div> -->
     <div class="column">
-        <h3 class="ui header">Transpose by Semitone(s):</h3>
+        <!-- <h3 class="ui header">Transpose by Semitone(s):</h3> -->
         <div class="ui action input">
             <input type="number" id="transpose" value="0"/>
             <button class="ui button" id="transpose-btn">Transpose</button>
