--- a/demo/index.html
+++ b/demo/index.html
@@ -4,17 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
     <meta name="description" content="A showcase for OpenSheetMusicDisplay.">
     <meta name="author" content="OpenSheetMusicDisplay contributors">
-    <!-- Demo index.js file is included automatically by webpack during build -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.js" type="text/javascript"></script> -->
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.css" media="all" rel="stylesheet" /> -->
-    <!-- <link rel="icon" href="./favicon.ico?" type="image/x-icon" /> -->
     <style>
         *,
         *:before,
@@ -553,26 +544,17 @@
 <body>
     <div class="ui four column grid container" id="divControls" style="visibility: hidden; opacity: 0.0; display: flex">
         <div class="column" style="width: 325px">
-            <!-- <h3 class="ui header">Select a sample:</h3> -->
             <select class="ui selection dropdown" id="selectSample"
                 style="width:320px; height:38%; visibility: hidden"></select>
         </div>
-        <!-- <div class="column" id="backend-select-div" style="visibility: hidden">
-        <h3 class="ui header">Render backend:</h3>
-        <select class="ui selection dropdown" id="backend-select" value="svg" style="height:38%; visibility: hidden;">
-            <option value="svg">SVG</option>
-            <option value="canvas">Canvas</option>>
-        </select>
-    </div> -->
-        <div class="column" style="width: 262px; padding-right: 0;">
-            <!-- <h3 class="ui header">Cursor controls:</h3> -->
+        <div class="column" style="width: 233px; padding-right: 0;">
             <div>
                 <div class="ui vertical buttons">
                     <div class="ui button" id="show-cursor-btn">
-                        <div class="visible content">显示指针</div>
+                        <div class="visible content">指针</div>
                     </div>
                     <div class="ui button" id="hide-cursor-btn">
-                        <div class="visible content">隐藏指针</div>
+                        <div class="visible content">指针</div>
                     </div>
                 </div>
                 <div class="ui vertical buttons">
@@ -585,24 +567,9 @@
                         <div class="visible content">向前</div>
                     </div>
                 </div>
-                <!-- <div class="ui vertical buttons">
-                <div class="ui animated fade button" id="reset-cursor-btn">
-                    <div class="visible content">Reset</div>
-                    <div class="hidden content">
-                        <i class="undo icon"></i>
-                    </div>
-                </div>
-            </div> -->
-                <!-- <div class="item">
-                <div class="ui toggle checkbox">
-                    <input type="checkbox" name="public" id="follow-cursor-checkbox">
-                    <label>Follow Cursor</label>
-                </div>
-            </div> -->
             </div>
         </div>
         <div class="column" id="zoomControls" style="width: 140px; padding-left: 0;">
-            <!-- <h3 class="ui header">Zoom controls:</h3> -->
             <div class="ui buttons" id="zoomControlsButtons">
                 <div class="ui button" id="zoom-in-btn" style="margin-right: 3px;">
                     放大
@@ -611,106 +578,12 @@
                     缩小
                 </div>
             </div>
-            <!-- <div class="ui vertical buttons">
-                <div class="ui button" id="debug-re-render-btn">Re-render</div>
-            </div>
-            <div class="ui vertical buttons">
-                <div class="ui button" id="debug-clear-btn">Clear</div>
-            </div> -->
-            <!-- <h4 class="ui header" id="zoom-str">???</h4> -->
         </div>
-        <!-- <div class="column">
-        <h3 class="ui header">Show bounding box for:</h3>
-        <select class="ui selection dropdown" id="selectBounding" style="visibility: hidden;">
-            <option value="none">None</option>
-            <option value="all">All</option>
-            <option value="VexFlowMeasure">Measures</option>
-            <option value="VexFlowGraphicalNote">GraphicalNotes</option>
-            <option value="VexFlowVoiceEntry">VoiceEntries</option>
-            <option value="VexFlowStaffEntry">StaffEntries</option>
-            <option value="GraphicalLabel">Labels</option>
-            <option value="VexFlowStaffLine">StaffLines</option>
-            <option value="SystemLine">SystemLines</option>
-            <option value="StaffLineActivitySymbol">ActivitySymbols</option>
-            <option value="VexFlowContinuousDynamicExpression">DynamicExpressions</option>
-        </select>
-    </div> -->
-        <!-- <div class="column">
-        <h3 class="ui header">Show debug information:</h3>
-        <div class="ui relaxed list">
-            <div class="item">
-                <div class="ui toggle checkbox">
-                    <input type="checkbox" name="public" id="skylineDebug">
-                    <label>Skyline</label>
-                </div>
-            </div>
-            <div class="item">
-                <div class="ui toggle checkbox">
-                    <input type="checkbox" name="public" id="bottomlineDebug">
-                    <label>Bottomline</label>
-                </div>
-            </div>
-        </div>
-    </div> -->
-        <!-- <div class="column">
-        <h3 class="ui header">Page size:</h3>
-        <select class="ui selection dropdown" id="selectPageSize"  style="visibility: hidden;">
-            <option value="endless">endless</option>
-            <option value="A3 P">A3 Portrait</option>
-            <option value="A3 L">A3 Landscape</option>
-            <option value="A4 P">A4 Portrait</option>
-            <option value="A4 L">A4 Landscape</option>
-            <option value="A5 P">A5 Portrait</option>
-            <option value="A5 L">A5 Landscape</option>
-            <option value="Letter P">Letter Portrait</option>
-            <option value="Letter L">Letter Landscape</option>
-        </select>
-        <div class="ui button" id="print-pdf-btn">Create PDF</div>
-    </div> -->
-        <div class="column" style="width: 190px">
-            <!-- <h3 class="ui header">Transpose by Semitone(s):</h3> -->
+        <div class="column" style="width: 246px;padding-left: 0;">
             <div class="ui action input">
                 <input type="number" id="transpose" value="0" style="width: 70px;" />
                 <button class="ui button" id="transpose-btn">转调</button>
-            </div>
-        </div>
-    </div>
-    <div id="optionalControls" style="opacity: 0.0; width: 95%; display: block">
-        <div class="ui three column grid container" style="padding: 10px; margin-right: auto; margin-left: auto"
-            id="optionalControlsColumnContainer">
-            <div class="column" id="zoomControlsButtons-optional-column" style="min-width: 30%; opacity: 0.0">
-                <div class="ui buttons" id="zoomControlsButtons-optional">
-                    <div class="ui button" id="zoom-in-btn-optional">
-                        <i class="search plus icon"></i>
-                    </div>
-                    <div class="ui button" id="zoom-out-btn-optional">
-                        <i class="search minus icon"></i>
-                    </div>
-                </div>
-                <h4 id="zoom-str-optional">???</h4>
-            </div>
-            <div class="column" id="print-pdf-btn-optional-column" style="opacity: 0.0; max-width: 25%;">
-                <div class="ui button" id="print-pdf-btn-optional">Create PDF</div>
-            </div>
-            <div class="column" id="selectPageSize-optional-column" style="opacity: 0.0; min-width: 35%">
-                <div class="ui two column grid container">
-                    <div class="column" style="margin-top: 8px">
-                        <h3>Format:</h3>
-                    </div>
-                    <div class="column">
-                        <select class="ui selection dropdown" id="selectPageSize-optional">
-                            <option value="endless">endless</option>
-                            <option value="A3 P">A3 Portrait</option>
-                            <option value="A3 L">A3 Landscape</option>
-                            <option value="A4 P">A4 Portrait</option>
-                            <option value="A4 L">A4 Landscape</option>
-                            <option value="A5 P">A5 Portrait</option>
-                            <option value="A5 L">A5 Landscape</option>
-                            <option value="Letter P">Letter Portrait</option>
-                            <option value="Letter L">Letter Landscape</option>
-                        </select>
-                    </div>
-                </div>
+                <button class="ui button" id="show-timing">计时</button>
             </div>
         </div>
     </div>
@@ -721,6 +594,11 @@
                 <td id="error-td"></td>
             </tr>
         </table>
+    </div>
+    <div id="timing" style="width: 100%; height: 60px; position: fixed; bottom: 0; background: white; z-index: 1; padding: 10px; box-shadow: 6px 0px 9px 2px rgba(0, 0, 0, .5);font-size: 20px; font-weight: bold; display: none">
+        <button class="ui button" id="timing-operator">开始计时/重置</button>
+        <span id="counting"></span>
+        <span id="now" style="float: right;"></span>
     </div>
 </body>
 
